ComboDB project fully functional

--- a/Combo Database Project/templates/submit_combo.html
+++ b/Combo Database Project/templates/submit_combo.html
@@ -11,6 +11,14 @@
 <body>
 
     <div class="container-fluid">
+      <br>
+      <button onclick="window.location.href='http://127.0.0.1:5000/submit_combo';">
+        <b>Submit a combo</b>
+      </button>  <button onclick="window.location.href='http://127.0.0.1:5000/view_combos';">
+        View combos
+      </button>
+      <hr>
+  
         <h1>Submit a combo</h1>
         <hr>
         
