--- a/Combo Database Project/templates/view_combos.html
+++ b/Combo Database Project/templates/view_combos.html
@@ -9,9 +9,17 @@
 </head>
 
 <body>
-
+  <div class="container-fluid">
+    <br>
+    <button onclick="window.location.href='http://127.0.0.1:5000/submit_combo';">
+      Submit a combo
+    </button>  <button onclick="window.location.href='http://127.0.0.1:5000/view_combos';">
+      <b>View combos</b>
+    </button>
+    <hr>
+    
     <div class="container-fluid">
-        <h1>View DB</h1>
+        <h1>View Combos</h1>
         <hr>
         
         <form action="/view_combos" method="POST">
